syntax = "proto3";

option csharp_namespace = "gRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Ping (PingRequest) returns (PingReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message PingRequest {}
message PingReply {
  string message = 1;
}
